# nl-firmware

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  COPYING.md  README.md  README.txt  build.sh  clang-format-all.sh  create_clang_format_docker.sh  dos2unix_all.bat  reformat-all.sh
NonMaps/: .gitignore  CMakeLists.txt  Makefile  pom.xml
NonMaps/MCView/: index.html  js.js  new.html  new.js  style.css
NonMaps/MCView/fonts/: source-sans-pro.css
NonMaps/online-help/: about.html  index.html  style.css  style_enhance.css
NonMaps/online-help/basic/: basic.html  modulation_basics.html  modulation_basics_script.js
NonMaps/online-help/fonts/: source-sans-pro.css
NonMaps/online-help/interface/: interface.html  shortcuts.html
NonMaps/online-help/introduction/: introduction.html
NonMaps/online-help/license/: license.html
NonMaps/online-help/setup-c15/: certificates.html  gloss-index.html  service.html  setup-c15.html  setup-system.html  specs.html  tr-shoot.html  update.html
NonMaps/online-help/synth-engine/: synth-engine.html
NonMaps/src/: C15.java
NonMaps/src/war/: Bank nuasd.xml  NonMaps.css  NonMaps.html  source-sans-pro.css  style.css
NonMaps/war/nonmaps/: 576DC909D6F72EEE5A4256CA8ACF0D44.cache.js  63D00F1F379C34E6E1CCF845F96DD476.cache.js  893B53097C77D4097B10DD5085DBB98B.cache.js  ADE842EBE256720EDD7677C12C5C2B13.cache.js  E6B3CA3ADA5C6A6ED26A8C3B9D904FAB.cache.js  compilation-mappings.txt  nonmaps.devmode.js
audio-engine/: CMakeLists.txt
audio-engine/src/: Options.cpp  Options.h  Types.h  main.cpp  main.h
audio-engine/src/io/: HighPriorityTask.cpp  HighPriorityTask.h  Log.cpp  Log.h  MidiHeartBeat.cpp  MidiHeartBeat.h
audio-engine/src/synth/: C15Synth.cpp  C15Synth.h  SimpleSynth.cpp  SimpleSynth.h  Synth.cpp  Synth.h
audio-engine/src/ui/: C15_CLI.cpp  C15_CLI.h  CommandLineInterface.cpp  CommandLineInterface.h  CommandlinePerformanceWatch.cpp  CommandlinePerformanceWatch.h
audio-engine/systemd/: audio-engine.service.in  run-audio-engine.sh
bbbb/: CMakeLists.txt
bbbb/src/: Application.cpp  Application.h  AudioEngineTest.cpp  Options.cpp  Options.h  bbbb.cpp  bbbb.h
bbbb/src/io/: Bridge.cpp  Bridge.h  Bridges.cpp  Bridges.h  FromButtonsBridge.cpp  FromButtonsBridge.h  FromEncoderBridge.cpp  FromEncoderBridge.h  FromLPCBridge.cpp  FromLPCBridge.h  Receiver.cpp  Receiver.h  RingBuffer.h  Sender.h  ToLPCBridge.cpp  (+7 more)
bbbb/systemd/: bbbb.service.in
build-tools/: CMakeLists.txt  c15-ota-update.sh  createC15update.sh  cross-build.sh
build-tools/bbb/: CMakeLists.txt  Dockerfile  createInstallMedium.sh  run-in-docker.sh  runInDocker.sh  runme.sh
build-tools/build-container/: CMakeLists.txt  Dockerfile.in
build-tools/create-c15-update/: Installer_Error_Codes.txt  create-c15-update.sh
build-tools/epc/: CMakeLists.txt  Dockerfile  README.md  build-c15-in-nonlinux-ap-docker.sh  build-c15-in-nonlinux-ap.sh  buildNonlinearLabsBinaries.sh  createInstallMedium.sh  createLocalRootFS.sh  createNonLinuxImage.sh  createNonlinuxISO.sh  createUpdate.sh  createUpdateFromRunningOS.sh  epc3-test-protocol.sh  installNonLinuxInfoVM.sh  post-install.sh  run-in-docker.sh  run-me-on-vm-host.sh  run-script-in-docker.sh  runScriptInDocker.sh  runme.sh  sda.sfdisk  upgrade50Plus.sh  wpa_supplicant.conf
build-tools/epc-one-for-all/: C15.nmconnection  CMakeLists.txt  createUpdate.sh  epc3-test-protocol.sh  post-install.sh
build-tools/epc2/: CMakeLists.txt
build-tools/lpc/: CMakeLists.txt  Dockerfile  runInDocker.sh
build-tools/pacman/: CMakeLists.txt
build-tools/pi4/: CMakeLists.txt  Dockerfile  build.sh  pi4.cmake  postinst
build-tools/playcontroller/: CMakeLists.txt  Dockerfile  runInDocker.sh
build-tools/web/: CMakeLists.txt  fetchMeteorResources.sh.in  runInWebDocker.sh.in
build-tools2/: CMakeLists.txt  idea.dot
build-tools2/epc1/: CMakeLists.txt
build-tools2/epc2/: CMakeLists.txt
nltools/: CMakeLists.txt
nltools/src/: StringTools.cpp
nltools/tools/: CMakeLists.txt
os/pi4/: CMakeLists.txt
parameter-db/: CMakeLists.txt
parameter-db/src/: ParameterList_1.7B.ods
playground/: CMakeLists.txt  Makefile
playground/resources/: ParameterList.csv  pack-journal.sh  readme_unicodes.txt
playground/specs/: branching.dot
playground/src/: Application.cpp  Application.h  Compatibility.h  CompileTimeOptions.h.in  GroupId.cpp  GroupId.h  Options.cpp  Options.h  ParameterId.cpp  ParameterId.h  playground-helpers.cpp  playground-helpers.h  playground.cpp  playground.h
playground/systemd/: playground.service.in
playground/tests/: C15.h  Makefile
projects/: .gitattributes  CMakeLists.txt
projects/NonMaps/: .classpath  CMakeLists.txt
projects/acceptance-tests/: CMakeLists.txt
projects/audio-engine/: CMakeLists.txt
projects/bbb/: CMakeLists.txt
projects/bbb-espi-driver/: Kbuild  Makefile  espi_buttons.c  espi_driver.h  espi_driver_core.c  espi_epc_ctrl.c  espi_fb.c  espi_fb.h  espi_leds.c  espi_lpc8xx.c  espi_lpc_ctrl.c  espi_ribbon_leds.c  espi_ssd1305.c  espi_ssd1322.c
projects/bbb-lpc-driver/: Kbuild  Makefile  lpc_bb_driver.c
projects/bbbb/: .gitignore  CMakeLists.txt
projects/epc/: CMakeLists.txt
projects/lpc-tool/: mk.bat
projects/lpc-tools/: .gitignore  CMakeLists.txt  mk.bat  send.bat
projects/nltools/: CMakeLists.txt
projects/online-help/: about.html  index.html  style.css
projects/playcontroller/: CMakeLists.txt  globals.h
projects/playground/: CMakeLists.txt
projects/realtime-system/: .gitignore  CMakeLists.txt
projects/scripts/: CMakeLists.txt  backup-presets.sh  fixOverlayOrder.sh  get-playground-version.sh  install-update.sh  restart-pg-if-running.sh  time.sh
projects/shared/: CMakeLists.txt  EHC-pedal-presets.c  EHC-pedal-presets.h  globals.h  lpc-converters.h  lpc-defs.h  version.h
projects/supervisor/: .gitignore  readme.md  readme.txt  supervisor.atsln  supervisor.cppproj  supervisorATM164A.cppproj  supervisorATM16A.cppproj
projects/text2soled/: CMakeLists.txt
projects/web/: CMakeLists.txt  build-time-info.js  build.sh.in  debug.sh.in  package-lock.json  package.json
(+8555 files in other folders)
